# rai-python-harness

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  run.jl  run_harness.py  schema.toml
example/: README.md  pyproject.toml  run_rai_sequence.py  schema.toml
example/data/: person.json
example/project/: run_sequence.toml
example/project/data/: X.csv  y.json
example/project/rel/load_data/: ucla_log_reg_test_data.rel
example/project/rel/queries/: admission_data_summary.rel  feature_X_as_floats.rel  feature_y_col-pos-val_transform.rel
harness/: helpers.jl  install_dependencies.jl
src/rai_python_harness/: query_utils.py  schema.py  sequence.py  sequence_logger.py  utils.py  validation.py
src/rai_sdk_harness/: query_utils.py  schema.py  sequence.py  sequence_logger.py  utils.py  validation.py
tests/: basic_key_test.py  schema_tests.py  sequence_logger_test.py  sequence_logger_tests.py  sequence_tests-class_functionality.py  sequence_tests-populate_database_tests.py  sequence_tests.py
tests/project/: data_load.toml  install_models.toml  test_queries.toml
tests/project/data/: address_colors.json  fc_salary_data.csv  mock_investments.csv
tests/project/rel/address_colors/: ac_query_colors-by-zip-code.rel
tests/project/rel/fc_example/: fc_installed-models.rel  fc_load-data.rel  fc_query_empty-relation.rel  fc_query_player.rel  fc_query_sum-w-max.rel
tests/project/rel/mock_investments/: mi_installed-models.rel  mi_query_total_mock_investments.rel  mi_query_total_mock_investments_by_company.rel
tests/run_script/: test_schema.toml
