[tool.poetry]
name = "rai-sdk-harness"
version = "0.0.3"
description = "Deterministic, standalone RAI Cloud run harness for the RAI Python SDK."
authors = ["Jason A. Grafft <jason.grafft@relational.ai>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
pytomlpp = "^1.0.11"
rai-sdk = { git = "https://github.com/RelationalAI/rai-sdk-python.git", branch = "main" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
rai-harness = "cli.cli:run_app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
