[tool.poetry]
name = "rai-python-harness-simple-example"
version = "0.0.1"
description = "Simple example project for the RAI Python Harness."
authors = ["Jason A. Grafft <jason.grafft@relational.ai>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
rai-sdk = "^0.6.8"
rai-python-harness = { git = "https://github.com/jagrafft/rai-python-harness", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
